force-app/main/default/objects/R360_Outbox_Event__c/R360_Outbox_Event__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Durable domain-event outbox for post-commit publication, retry and dead-letter recovery.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Outbox Event</label><nameField><displayFormat>EVT-{00000}</displayFormat><label>Outbox Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Outbox Events</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>