force-app/main/default/objects/R360_Outbox_Event__c/fields/Aggregate_ID__c.field-meta.xml
<CustomField><fullName>Aggregate_ID__c</fullName><label>Aggregate ID</label><length>18</length><required>true</required><type>Text</type></CustomField>