force-app/main/default/objects/R360_Outbox_Event__c/fields/Aggregate_Version__c.field-meta.xml
<CustomField><fullName>Aggregate_Version__c</fullName><label>Aggregate Version</label><precision>8</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>