force-app/main/default/objects/R360_Outbox_Event__c/fields/Attempt_Count__c.field-meta.xml
<CustomField><fullName>Attempt_Count__c</fullName><defaultValue>0</defaultValue><label>Attempt Count</label><precision>3</precision><scale>0</scale><type>Number</type></CustomField>