force-app/main/default/objects/R360_Outbox_Event__c/fields/Correlation_ID__c.field-meta.xml
<CustomField><fullName>Correlation_ID__c</fullName><label>Correlation ID</label><length>64</length><required>true</required><type>Text</type></CustomField>