force-app/main/default/objects/R360_Outbox_Event__c/fields/Event_ID__c.field-meta.xml
<CustomField><fullName>Event_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Event ID</label><length>120</length><required>true</required><type>Text</type><unique>true</unique></CustomField>