force-app/main/default/objects/R360_Outbox_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField><fullName>Event_Type__c</fullName><label>Event Type</label><length>100</length><required>true</required><type>Text</type></CustomField>