force-app/main/default/objects/R360_Outbox_Event__c/fields/Last_Error__c.field-meta.xml
<CustomField><fullName>Last_Error__c</fullName><label>Redacted Last Error</label><length>2000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>