force-app/main/default/objects/R360_Outbox_Event__c/fields/Payload__c.field-meta.xml
<CustomField><fullName>Payload__c</fullName><description>Allowlisted, minimized JSON; never store secrets or unrestricted personal data.</description><label>Payload</label><length>32000</length><type>LongTextArea</type><visibleLines>8</visibleLines></CustomField>