force-app/main/default/objects/R360_Outbox_Event__c/fields/Published_At__c.field-meta.xml
<CustomField><fullName>Published_At__c</fullName><label>Published At</label><type>DateTime</type></CustomField>